# cargo-stranding-again

./: AGENTS.md  Cargo.toml  README.md  TODO.md
TODO/: cargo-event-and-commands.md  persistence.md
TODOs/: ai-north-star.md  cargo-jank-to-rework.md  worldgen-north-star.md
data/items/: copper_charm.ron  cracked_cup.ron  feverfew_package.ron  roadside_rations.ron
docs/: cargo-model.md  energy-timeline.md  glossary.md  map-coords.md
scenarios/headless/: failed-pickup-no-parcel.json  momentum-cargo-spill.json  pickup-adjacent-loose-parcel.json  repeated-wait.json  sprint-wait.json  walk-east.json
src/: app.rs  cargo.rs  components.rs  energy.rs  headless.rs  ids.rs  input.rs  lib.rs  logging.rs  main.rs  map.rs  messages.rs  momentum.rs  movement.rs  render.rs  resources.rs  schedules.rs  simulation.rs  systems.rs  world_setup.rs
src/ai/: pathing.rs
src/data/: items.rs  mod.rs
src/persistence/: cargo.rs  eligibility.rs  envelope.rs  ids.rs  map.rs  migration.rs  mod.rs  player.rs  runtime.rs  slot.rs  storage.rs  timeline.rs
src/render/: hud.rs  layout.rs  menu.rs  view_model.rs  world.rs
src/resources/: camera.rs  input.rs  menu.rs  mod.rs  simulation.rs
src/systems/: agents.rs  cargo.rs  inventory.rs  menu.rs  mod.rs  movement_mode.rs  player.rs  timeline.rs  wait.rs
src/systems/player/: cargo.rs  movement.rs
