[package]
name = "cargo-stranding-again"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.18.1"
macroquad = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
