[package]
name = "cargo-stranding-again"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.18.1"
macroquad = "0.4"
pathfinding = "4.15.0"
ron = { version = "0.12.1", features = ["integer128"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
